[gd_scene load_steps=3 format=3 uid="uid://eqapv16avxvm"]

[ext_resource type="Script" path="res://pauseMenu/pause_menu.gd" id="1_4qdl0"]
[ext_resource type="FontFile" uid="uid://djhci0wtk3red" path="res://Airport_Cyr.ttf" id="1_m752m"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_4qdl0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m752m")
theme_override_font_sizes/font_size = 40
text = "Pause menu"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="Return" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m752m")
theme_override_font_sizes/font_size = 35
text = "Return"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="backMenu" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m752m")
theme_override_font_sizes/font_size = 35
text = "Back menu
"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="quitGame" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m752m")
theme_override_font_sizes/font_size = 35
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/backMenu" to="." method="_on_back_menu_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/quitGame" to="." method="_on_quit_game_pressed"]
